# cmbemu

./: .gitignore  CLAUDE.md  README.md  STATUS.md  bench_cpu_speed.py  bench_gen.py  bench_ranges.py  data_description.md  emu_competition_data_setup.py  idea.md  mock_cvl_cmb_likelihood.ipynb  pyproject.toml  scoring.md
.github/workflows/: ci.yml  publish.yml
scripts/: build_dataset.py  build_small_dataset.py  check_pos_def.py  chi2_stats.py  dataset_plots.py  evaluate_small.py  hf_dataset_readme.md  upload_dataset.py  verify_chi2.py
src/cmbemu/: __init__.py  api.py  baselines.py  benchmark.py  box.py  cli.py  data.py  generate.py  io.py  lhc.py  likelihood.py  plotting.py  scoring.py
